--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,28 @@
-plugins {
+plugins
+        {
     id 'java-library'
 }
 
-repositories {
+repositories
+        {
     mavenCentral()
 }
 
-dependencies {
+dependencies
+        {
     testImplementation 'com.codeborne:selenide:5.17.3'
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.0"
+    testRuntimeOnly    "org.junit.jupiter:junit-jupiter-engine:5.7.0"
+    testImplementation 'com.codeborne:pdf-test:1.7.0'
+    testImplementation 'com.codeborne:xls-test:1.6.0'
+    testImplementation 'org.apache.poi:poi:5.2.2'
+    //testImplementation 'net.lingala:zip4j:1.3.3'
+    testImplementation 'net.lingala.zip4j:zip4j:2.11.1'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
 }
 
-test {
+test
+        {
     useJUnitPlatform()
 }
