--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies
         {
     testImplementation 'com.codeborne:selenide:5.17.3'
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.0"
     testRuntimeOnly    "org.junit.jupiter:junit-jupiter-engine:5.7.0"
     testImplementation 'com.codeborne:pdf-test:1.7.0'
     testImplementation 'com.codeborne:xls-test:1.6.0'
@@ -20,6 +21,8 @@ dependencies
     testImplementation 'net.lingala.zip4j:zip4j:2.11.1'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
 }
 
 test
