--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins
         {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.0'
+    id 'ru.vyarus.quality' version '4.8.0'
+
 }
 
 repositories
@@ -8,16 +11,27 @@ repositories
     mavenCentral()
 }
 
+allure {
+    autoconfigure = true
+    version = "2.19.0"
+    useJUnit5
+            {
+                version = "2.19.0"
+            }
+}
+
+sourceCompatibility = 1.8
 dependencies
         {
-    testImplementation 'com.codeborne:selenide:5.17.3'
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.0"
-    testRuntimeOnly    "org.junit.jupiter:junit-jupiter-engine:5.7.0"
+    testImplementation 'io.qameta.allure:allure-java-commons:2.19.0'
+    testImplementation 'io.qameta.allure:allure-selenide:2.19.0'
+    testImplementation 'com.codeborne:selenide:6.7.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'com.codeborne:pdf-test:1.7.0'
     testImplementation 'com.codeborne:xls-test:1.6.0'
     testImplementation 'org.apache.poi:poi:5.2.2'
-    //testImplementation 'net.lingala:zip4j:1.3.3'
     testImplementation 'net.lingala.zip4j:zip4j:2.11.1'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'org.hamcrest:hamcrest:2.2'
