--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,12 @@ allure {
             }
 }
 
+
+configurations {
+//    Configuration.browser = "firefox"
+
+}
+
 tasks.withType(JavaCompile)
         {
             options.encoding = 'UTF-8'
@@ -31,9 +37,10 @@ dependencies
     testImplementation 'io.qameta.allure:allure-java-commons:2.19.0'
     testImplementation 'io.qameta.allure:allure-selenide:2.19.0'
     testImplementation 'io.qameta.allure:allure-rest-assured:2.19.0'
-    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
+ //   testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
     testImplementation 'io.rest-assured:rest-assured:5.2.0'
  //   testImplementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
+ //   testImplementation 'org.seleniumhq.selenium:selenium-firefox-driver:4.5.0'
 
     testImplementation 'com.codeborne:selenide:6.7.4'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
@@ -46,7 +53,6 @@ dependencies
     testImplementation 'net.lingala.zip4j:zip4j:2.11.1'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'org.hamcrest:hamcrest:2.2'
-    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
     testImplementation 'org.assertj:assertj-core:3.23.1'
 }
 
